fixed modal scrollbars (ffx) fixed calendar component

--- a/application/static/scss/admin/main.scss
+++ b/application/static/scss/admin/main.scss
@@ -4,10 +4,40 @@
 
 @import "bookings";
 
+$modalHeaderHeight: 28px;
+$modalFooterHeight: 32px;
+
 .modal.big-modal {
 	width: 80%;
-	max-height: 80%;
+	height: 80%;
 	margin: -20% 0 0 -40%;
+
+	.modal-header{
+		height: $modalHeaderHeight;
+		overflow-y: hidden;
+		h3,ul{
+			float: left;
+		}
+		ul{
+			margin-left: 2em;
+		}
+	}
+	.modal-body{
+		max-height: auto;
+		padding-top: 0;
+		padding-bottom: 0;
+		&>*:firstChild{
+			margin-top: 15px;
+		}
+		&>*:lastChild{
+			margin-bottom: 15px;
+		}
+	}
+	.modal-footer{
+		height: $modalFooterHeight;
+		position: static;
+		bottom: 0;
+	}
 	
 	textarea {
 		width: 80%;
